--- a/mainteste/templates/cadastrar.html
+++ b/mainteste/templates/cadastrar.html
@@ -1,13 +1,19 @@
 <HTML>
 <form action="gravar" method="POST">
+  <label for="marca">Marca:</label><br>
+  <input type="text" name="marca" /><br>
   <label for="nome">Nome:</label><br>
   <input type="text" name="nome" /><br>
   <label for="preco">Preço:</label><br>
   <input type="text" name="preco" /><br>
+  <label for="quantidade">Quantidade:</label><br>
+  <input type="text" name="quantidade" /><br>
+  <label for="validade">Validade:</label><br>
+  <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
   <br><br>
-  <input type="submit" value="enviar" />
+  <input type="submit" value="Gravar produto" />
 </form>
 
 </HTML>
