--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -1,7 +1,7 @@
 <HTML>
 <form action="alterar" method="POST">
-  <label for="marca">ID:</label><br>
-  <input type="text" name="marca" /><br>
+  <label for="prod_id">ID:</label><br>
+  <input type="text" name="prod_id" /><br>
   <label for="marca">Marca:</label><br>
   <input type="text" name="marca" /><br>
   <label for="nome">Nome:</label><br>
