--- a/mainteste/templates/cadastrar.html
+++ b/mainteste/templates/cadastrar.html
@@ -12,6 +12,8 @@
   <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
+  <label for="prodID">prodID:</label><br>
+  <input type="text" name="prodID" /><br>
   <br><br>
   <input type="submit" value="Gravar produto" />
 </form>
