--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -1,7 +1,5 @@
 <HTML>
 <form action="alterar" method="POST">
-  <label for="prod_id">ID:</label><br>
-  <input type="text" name="prod_id" /><br>
   <label for="marca">Marca:</label><br>
   <input type="text" name="marca" /><br>
   <label for="nome">Nome:</label><br>
@@ -14,6 +12,8 @@
   <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
+  <label for="prodID">prodID:</label><br>
+  <input type="text" name="prodID" /><br>
   <br><br>
   <input type="submit" value="Gravar produto" />
 </form>
