--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -12,8 +12,8 @@
   <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
-  <label for="prodID">prodID:</label><br>
-  <input type="text" name="prodID" /><br>
+  <label for="prod_ID">prod_ID:</label><br>
+  <input type="text" name="prod_ID" /><br>
   <br><br>
   <input type="submit" value="Gravar produto" />
 </form>
