--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -12,10 +12,11 @@
   <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
-  <label for="prod_ID">prod_ID:</label><br>
-  <input type="text" name="prod_ID" /><br>
+  <label for="prodID">ID do produto:</label><br>
+  <input type="text" name="prodID" /><br>
   <br><br>
   <input type="submit" value="Gravar produto" />
 </form>
 
 </HTML>
+
