--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -15,7 +15,7 @@
   <label for="prodID">ID do produto:</label><br>
   <input type="text" name="prodID" /><br>
   <br><br>
-  <input type="submit" value="Gravar produto" />
+  <input type="submit" value="Alterar produto" />
 </form>
 
 </HTML>
