--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -1,5 +1,5 @@
 <HTML>
-<form action="alterarProd" method="POST">
+<form action="alterarProd" method="PUT">
   <label for="marca">Marca:</label><br>
   <input type="text" name="marca" /><br>
   <label for="nome">Nome:</label><br>
