--- a/mainteste/templates/lista.html
+++ b/mainteste/templates/lista.html
@@ -1,6 +1,6 @@
 <table>
     <tr>
-        <td> Produtos: </td>
+        <td> Produtos cadastrados: </td>
     </tr>
     {% for item in datas %}
     <tr>
@@ -11,6 +11,7 @@
         <td>{{item[4]}}</td>
         <td>{{item[5]}}</td>
         <td>{{item[6]}}</td>
+        <td>{{item[7]}}</td>
     </tr>
     {% endfor %}
 </table>
