--- a/mainteste/templates/cadastrar.html
+++ b/mainteste/templates/cadastrar.html
@@ -10,6 +10,8 @@
   <input type="text" name="quantidade" /><br>
   <label for="validade">Validade:</label><br>
   <input type="text" name="validade" /><br>
+  <label for="garantia">Garantia:</label><br>
+  <input type="text" name="garantia" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
   <label for="prodID">ID do produto:</label><br>
