--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -9,6 +9,8 @@
   <label for="quantidade">Quantidade:</label><br>
   <input type="text" name="quantidade" /><br>
   <label for="validade">Validade:</label><br>
+  <label for="garantia">Garantia:</label><br>
+  <input type="text" name="garantia" /><br>
   <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
