--- a/mainteste/templates/deletar.html
+++ b/mainteste/templates/deletar.html
@@ -1,1 +1,9 @@
+<HTML>
+<form action="deletar" method="DELETE">
+  <label for="prodID">ID do produto:</label><br>
+  <input type="text" name="prodID" /><br>
+  <br><br>
+  <input type="submit" value="Deletar produto" />
+</form>
 
+</HTML
