--- a/mainteste/templates/alterar.html
+++ b/mainteste/templates/alterar.html
@@ -9,16 +9,16 @@
   <label for="quantidade">Quantidade:</label><br>
   <input type="text" name="quantidade" /><br>
   <label for="validade">Validade:</label><br>
+  <input type="text" name="validade" /><br>
   <label for="garantia">Garantia:</label><br>
   <input type="text" name="garantia" /><br>
-  <input type="text" name="validade" /><br>
   <label for="categoria">Categoria:</label><br>
   <input type="text" name="categoria" /><br>
   <label for="prodID">ID do produto:</label><br>
   <input type="text" name="prodID" /><br>
   <br><br>
-  <input type="submit" value="Alterar produto" />
+  <input type="submit" value="Gravar produto" />
 </form>
 
-</HTML>
+</HTML
 
